Fix methods that use deprecated methods in Java 21